feat: add socket server

--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "debug": "^4.1.1",
     "discord.js": "^11.5.1",
     "dotenv": "^8.2.0",
-    "iut-calendar-parser": "https://github.com/iverly/iut-calendar-parser"
+    "iut-calendar-parser": "https://github.com/iverly/iut-calendar-parser",
+    "socket.io": "^2.3.0"
   },
   "scripts": {
     "start": "node -r dotenv/config index.js",
