feat: add fetch-day methods for every group

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "scripts": {
     "start": "node -r dotenv/config index.js",
-    "dev": "DEBUG=* nodemon -r dotenv/config index.js"
+    "dev": "DEBUG=* nodemon -r dotenv/config index.js",
+    "client": "node -r dotenv/config client.test.js"
   }
 }
